tests/ui/suggestions/non-existent-field-present-in-subfield.stderr
error[E0609]: no field `c` on type `Foo`
  --> $DIR/non-existent-field-present-in-subfield.rs:37:24
   |
LL |     let _test = &fooer.c;
   |                        ^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
LL |     let _test = &fooer.first.bar.c;
   |                        ++++++++++

error[E0609]: no field `test` on type `Foo`
  --> $DIR/non-existent-field-present-in-subfield.rs:40:24
   |
LL |     let _test2 = fooer.test;
   |                        ^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
LL |     let _test2 = fooer.first.bar.c.test;
   |                        ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0609`.
